--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,11 @@
 body{
-    background: black;
+    margin: 2px;
+    background: rgb(94, 94, 94);
     color:white;
+}
+
+canvas{
+    width: 100vw;
+    height:100vv;
+    background: rgb(0, 0, 0);
 }
